fixes for newer wp versions, fixed mobile comment form styles, fixed page not showing metadata

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,11 +538,14 @@ display: table-cell;
     div#commentsHolder {
     padding: 0;
     }
+    #comments div.comments-icon-container {
+        display: none;
+    }
 }
 
 .comment-form-author, .comment-form-email, .comment-form-url, .comment-form-cookies-consent, .form-submit {
     display: none;
-    width: 48%;
+    min-width: 48%;
 }
 
 #commentsHolder.focused .comment-form-author, #commentsHolder.focused .comment-form-email, #commentsHolder.focused .comment-form-url, #commentsHolder.focused .comment-form-cookies-consent, #commentsHolder.focused .form-submit {
